<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.base.MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_white">

        <LinearLayout
            android:id="@+id/linear_layout_homepage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_homepage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_bg_image_tag_homepage" />

            <TextView
                android:id="@+id/text_view_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/homepage_tag"
                android:textColor="@drawable/selector_bg_text_tag_homepage"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_merchant"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_merchant"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_bg_image_tag_merchant" />

            <TextView
                android:id="@+id/text_view_merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/merchant_tag"
                android:textColor="@drawable/selector_bg_text_tag_merchant"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_shop"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_bg_image_tag_shop" />

            <TextView
                android:id="@+id/text_view_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/shop_tag"
                android:textColor="@drawable/selector_bg_text_tag_shop"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_share"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_bg_image_tag_share" />

            <TextView
                android:id="@+id/text_view_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/share_tag"
                android:textColor="@drawable/selector_bg_text_tag_share"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_myself"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_myself"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_bg_image_tag_myself" />

            <TextView
                android:id="@+id/text_view_myself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/myself_tag"
                android:textColor="@drawable/selector_bg_text_tag_myself"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
